<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    app:passwordToggleEnabled="true"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/arrow_left"
            android:id="@+id/back_btn"
            android:contentDescription="TODO" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/brown_btn"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:ems="10"
            android:fontFamily="@font/medium_font"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:ems="10"
            android:fontFamily="@font/medium_font"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_pw"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:ems="10"
            android:fontFamily="@font/medium_font"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_pw_2"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:ems="10"
            android:fontFamily="@font/medium_font"
            android:hint="Password Confirm"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_btn"
            android:fontFamily="@font/medium_font"
            android:text="@string/sign_up"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:backgroundTint="@null" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>