<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/arrow_left"
            android:id="@+id/back_btn"
            android:contentDescription="TODO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/brown_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        >

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/edit_id"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:textSize="20sp"
            android:ems="10"
            android:fontFamily="@font/medium_font"
            android:hint="@string/email"
            android:textColorHint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:inputType="textEmailAddress" />

        <EditText
            android:autofillHints="password"
            android:id="@+id/edit_pw"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:textSize="20sp"
            android:ems="10"
            android:fontFamily="@font/medium_font"
            android:hint="@string/password"
            android:textColorHint="@color/dark_grey"
            android:textColor="@color/dark_grey"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:background="@drawable/white_btn"
                android:fontFamily="@font/medium_font"
                android:text="@string/sign_in"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@null"
                android:padding="10dp"/>

            <Button
                android:id="@+id/btn_register"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="30dp"
                android:background="@drawable/white_btn"
                android:fontFamily="@font/medium_font"
                android:text="@string/sign_up"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@null"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>