<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryActivity"
    android:background="@color/light_white"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/arrow_left"
            android:contentDescription="@string/backspace" />

        <TextClock
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/medium_font"
            android:format12Hour="MMM, dd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/sliders_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/sliders"
            android:contentDescription="@string/setting_sliders"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/diaryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="Test Hint" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/book"
            android:contentDescription="Go to User Diary Page" />

        <ImageButton
            android:id="@+id/date_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/calendar"
            android:contentDescription="Go to User Calendar Page" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>